# Desafio-prossel-2026.1-software--Josias

./: .gitignore  CMakeLists.txt  README.md
simulador/include/: Interfaces.h
simulador/src/: Simulator.cpp
solucao/include/: Estrategia.h
solucao/src/: Estrategia.cpp
